--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ceramicnetwork/http-client": "^1.4.3",
+    "@ceramicnetwork/stream-tile": "^1.4.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@glazed/datamodel": "^0.2.0",
+    "@glazed/did-datastore": "^0.2.0",
+    "@glazed/tile-loader": "^0.1.1",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.10.8",
+    "@mui/styles": "^5.1.0",
+    "@stablelib/random": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "did-resolver": "^4.0.0",
+    "dids": "^2.4.0",
+    "key-did-provider-ed25519": "^1.0.1",
+    "key-did-resolver": "^1.4.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
+    "uint8arrays": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +55,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@ceramicnetwork/cli": "^1.8.0",
+    "@ceramicnetwork/common": "^1.7.1",
+    "@glazed/devtools": "^0.1.3",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-json-tree": "^0.13.0",
+    "css-loader": "^6.5.1",
+    "del-cli": "^4.0.1",
+    "esbuild-loader": "^2.16.0",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.4.4",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
