--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://code-business.github.io/ceramic-frontend",
   "name": "ceramic-frontend",
   "version": "0.1.0",
   "private": true,
@@ -36,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -67,7 +69,7 @@
     "css-loader": "^6.5.1",
     "del-cli": "^4.0.1",
     "esbuild-loader": "^2.16.0",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
