build error fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://code-business.github.io/ceramic-frontend",
+  "homepage": "",
   "name": "ceramic-frontend",
   "version": "0.1.0",
   "private": true,
