--- a/package.json
+++ b/package.json
@@ -1,62 +1,32 @@
 {
-  "homepage": "",
-  "name": "ceramic-frontend",
+  "name": "glaze-demo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ceramicstudio.github.io/glaze-demo-app",
+  "scripts": {
+    "ceramic": "ceramic daemon",
+    "create-model": "node --experimental-json-modules ./scripts/create-model.mjs",
+    "publish-model": "node --experimental-json-modules ./scripts/publish-model.mjs",
+    "start": "webpack serve --port 3000 --mode development",
+    "build": "del build && cp -r public build && webpack --mode production",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@ceramicnetwork/http-client": "^1.4.3",
     "@ceramicnetwork/stream-tile": "^1.4.0",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@glazed/datamodel": "^0.2.0",
     "@glazed/did-datastore": "^0.2.0",
     "@glazed/tile-loader": "^0.1.1",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.10.8",
-    "@mui/styles": "^5.1.0",
     "@stablelib/random": "^1.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "did-resolver": "^4.0.0",
     "dids": "^2.4.0",
     "key-did-provider-ed25519": "^1.0.1",
-    "key-did-resolver": "^1.4.4",
+    "key-did-resolver": "^1.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-json-view": "^1.21.3",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.8.4",
-    "uint8arrays": "^3.0.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
     "@ceramicnetwork/cli": "^1.8.0",
@@ -65,11 +35,10 @@
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
-    "@types/react-json-tree": "^0.13.0",
     "css-loader": "^6.5.1",
     "del-cli": "^4.0.1",
     "esbuild-loader": "^2.16.0",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
