--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "dependencies": {
     "@ceramicnetwork/http-client": "^1.4.3",
     "@ceramicnetwork/stream-tile": "^1.4.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@glazed/datamodel": "^0.2.0",
     "@glazed/did-datastore": "^0.2.0",
     "@glazed/tile-loader": "^0.1.1",
+    "@mui/material": "^5.10.9",
     "@stablelib/random": "^1.0.0",
+    "axios": "^1.1.3",
+    "buffer": "^6.0.3",
     "dids": "^2.4.0",
     "key-did-provider-ed25519": "^1.0.1",
     "key-did-resolver": "^1.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.21.3",
     "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
