--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.21.3",
+    "react-loader-spinner": "^5.3.4",
     "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
